Fix the tag label alignment and some spelling mistakes in the data

--- a/src/styles/button/button.css
+++ b/src/styles/button/button.css
@@ -1,13 +1,9 @@
 @utility base-button {
   appearance: none;
   text-decoration: none;
-  display: inline-grid;
   font-weight: 600;
-  text-align: center;
   font-size: theme(--button-font-size);
   line-height: 1;
-  align-items: center;
-  justify-content: center;
 
   cursor: pointer;
 
